# Market-Indicator-Cli

./: .gitignore  .pylintrc  Pipfile  README.md  RunFromScript.py  cli_main.py  config.yaml  dev-requirements.txt  main.py  main2.py  pyproject.toml  requirements.txt  structure
Market-Indicator-Cli/cli/: run_handler.py
Market-Indicator-Cli/plots/: multi_plotter.py
STONKZILLA/: .gitignore
STONKZILLA/data_sources/: alphavantage.py
STONKZILLA/indicators/: adx.py  bbands.py  ema.py
cli/: cli_handler.py  config_model.py  main_command.py  options.py  run_handler.py  run_handlerv2.py  services.py
data_sources/: alphavantage.py  alphavantage_source.py  base_source.py  yfinance.py  yfinance_source.py
indicators/: ADX.py  BBANDS.py  EMA.py  MACD.py  OBV.py  RSI.py  SMA.py  adx.py  base_indicator.py  bbands.py  ema.py  fibonacci_retracement.py  macd.py  obv.py  rsi.py  sma.py
plots/: base_plotter.py  candlestick_plotter.py  candlestick_plotter2.py  multi_plotter.py  plot_methods.py  plotly.py  plotter.py
services/: data_fetcher.py  indicator_runner.py  plot_service.py
stonkzilla/indicators/: sma.py
stonkzilla/plots/: candlestick_plotter.py
validators/: input_and_validation.py  input_validators.py
