[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "STONKZILLA"
version = "0.1.2"
description = "Market price and indicator plotter."
readme = "README.md"
requires-python = ">=3.13.3"
dynamic = ["dependencies", "optional-dependencies"]
license = { text = "MIT" }

authors = [
  { name = "Jakub Gąsior", email = "jakubgasior72@gmail.com" }
]

[project.scripts]
stonkzilla = "main:main"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
where = ["."]
